2006-05-01 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* SizeF.cs: serialization compatibility fixes. Closes bug #78236.

2006-04-30  Peter Dennis Bartok  <pbartok@novell.com>

	* Icon.cs: Icon AND masks are organized in strides, fixed to calculate
	  and set proper transparency. Also fixed broken calculation of AND
	  size when reading the icon. NDocGui now shows pretty buttons.

2006-04-28  Sebastien Pouliot  <sebastien@ximian.com> 

	* Color.cs: corcompare fix. Remove ComVisible attribute from 2.0 build
	* Region.cs: Remove old todo that were fixed in libgdiplus.
	* Image.cs: corcompare fixes. Clone isn't virtual. Added DefaultValue
	attribute to Tag property. FromStream(Stream,bool,bool) is available
	in Fx 1.1 (probably since SP1).

2006-04-28  Sebastien Pouliot  <sebastien@ximian.com>

	* Graphics.cs: Added MonoTODO on some DrawCurve methods because 
	libgdiplus doesn't use the numberOfSegments argument.

2006-04-27  Sebastien Pouliot  <sebastien@ximian.com>

	* gdipFunctions.cs: Added wrappers for GdipAddPathLine2 and 
	GdipAddPathLine2I methods (to allow adding a single point).

2006-04-27  Sebastien Pouliot  <sebastien@ximian.com> 

	* gdipFunctions.cs: Added CharSet=CharSet.Unicode to GdipAddString and
	GdipAddStringI wrapper methods.

2006-04-26 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Bitmap.cs: throw when the target pixel format differs from the one
	of the image and it's an indexed format. We were failing in UnlockBits
	before.

2006-04-25  Miguel de Icaza  <miguel@novell.com>

	* FontConverter.cs (FontUnitConverter): implement.   CorCompare
	for some reason does not dig into nested classes, match the
	documentation. 

	(FontNameConverter): Return the fonts available on the system. 

2006-04-25  Peter Dennis Bartok  <pbartok@novell.com>

	* Icon.cs: We need to or, not and our alpha values into the
	  palette. Also, we need to actually store the altered palette
	  on the bitmap, since we are altering a copy.
